--- a/config/sync/core.entity_form_display.node.sponsor.default.yml
+++ b/config/sync/core.entity_form_display.node.sponsor.default.yml
@@ -7,7 +7,7 @@ dependencies:
     - field.field.node.sponsor.field_metatags
     - field.field.node.sponsor.field_sponsor_logo
     - field.field.node.sponsor.field_sponsor_url
-    - field.field.node.sponsor.field_sponsorship_type
+    - field.field.node.sponsor.field_sponsorship_level
     - image.style.thumbnail
     - node.type.sponsor
   module:
@@ -56,11 +56,15 @@ content:
       placeholder_url: ''
       placeholder_title: ''
     third_party_settings: {  }
-  field_sponsorship_type:
-    type: options_select
+  field_sponsorship_level:
+    type: entity_reference_autocomplete
     weight: 123
     region: content
-    settings: {  }
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
   path:
     type: path
