--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,9 @@
         "drupal/gutenberg": "^3.0@dev",
         "drupal/menu_link_attributes": "^1.5",
         "drupal/metatag": "^2.1",
+        "drupal/migrate_plus": "^6.0",
+        "drupal/migrate_source_csv": "^3.7",
+        "drupal/migrate_tools": "^6.0",
         "drupal/pathauto": "^1.13",
         "drupal/seckit": "^2.0",
         "drupal/simple_sitemap": "^4.2",
