--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -6,8 +6,8 @@ name: 'Drupal GovCon'
 mail: no-reply@drupalgovcon.org
 slogan: ''
 page:
-  403: '/access-denied'
-  404: '/page-not-found'
+  403: /access-denied
+  404: /page-not-found
   front: /homepage
 admin_compact_mode: false
 weight_select_max: 100
