DGC-81: Fix the content not having space from top and bottom . (#71)
* DGC-81: Fix the content not having space from top and bottom .

* DGC-81: Update the link hover effect.

* DGC-81: Update the media type to load from drupal.

--- a/config/sync/core.entity_form_display.node.session_archive.default.yml
+++ b/config/sync/core.entity_form_display.node.session_archive.default.yml
@@ -25,6 +25,7 @@ dependencies:
     - file
     - image
     - link
+    - media_library
     - metatag
     - path
     - text
@@ -141,14 +142,11 @@ content:
       progress_indicator: throbber
     third_party_settings: {  }
   field_video:
-    type: entity_reference_autocomplete
+    type: media_library_widget
     weight: 132
     region: content
     settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
-      placeholder: ''
+      media_types: {  }
     third_party_settings: {  }
   path:
     type: path
