--- a/config/sync/extlink.settings.yml
+++ b/config/sync/extlink.settings.yml
@@ -2,7 +2,7 @@ _core:
   default_config_hash: TezMS-7JcOkDpAWOQyscXOEmNKoWpXUFlBZ-SwEOmag
 extlink_use_external_js_file: false
 extlink_exclude_admin_routes: false
-extlink_target: false
+extlink_target: true
 extlink_target_no_override: false
 extlink_title_no_override: false
 extlink_nofollow: false
