DGC-48: Content Moderation Workflows (#69)
* DGC-48: Content Moderation Workflows.

* DGC-48: Updated permissions for roles.

* DGC-48: Updated permissions for content author.

* DGC-48: Updated transitions and permissions for both roles.

* DGC-48: Update content moderation.

---------

Co-authored-by: prashant114606 <prashant114606@gmail.com>

--- a/config/sync/core.entity_view_display.node.sponsor.sponsor_teaser.yml
+++ b/config/sync/core.entity_view_display.node.sponsor.sponsor_teaser.yml
@@ -20,6 +20,11 @@ targetEntityType: node
 bundle: sponsor
 mode: sponsor_teaser
 content:
+  content_moderation_control:
+    settings: {  }
+    third_party_settings: {  }
+    weight: -20
+    region: content
   field_metatags:
     type: metatag_empty_formatter
     label: above
