--- a/config/sync/core.entity_view_display.node.sponsor.default.yml
+++ b/config/sync/core.entity_view_display.node.sponsor.default.yml
@@ -19,6 +19,11 @@ targetEntityType: node
 bundle: sponsor
 mode: default
 content:
+  content_moderation_control:
+    settings: {  }
+    third_party_settings: {  }
+    weight: -20
+    region: content
   field_conference_year:
     type: entity_reference_label
     label: above
