--- a/config/sync/workflows.workflow.editorial.yml
+++ b/config/sync/workflows.workflow.editorial.yml
@@ -2,6 +2,10 @@ uuid: 4c5321c0-4481-490e-9ed4-8c6dda11ad23
 langcode: en
 status: true
 dependencies:
+  config:
+    - node.type.landing_page
+    - node.type.special_announcement
+    - node.type.sponsor
   module:
     - content_moderation
 _core:
@@ -13,12 +17,17 @@ type_settings:
   states:
     archived:
       label: Archived
-      weight: 5
+      weight: 1
       published: false
       default_revision: true
     draft:
       label: Draft
-      weight: -5
+      weight: -2
+      published: false
+      default_revision: false
+    needs_review:
+      label: 'Needs Review'
+      weight: -1
       published: false
       default_revision: false
     published:
@@ -32,32 +41,45 @@ type_settings:
       from:
         - published
       to: archived
-      weight: 2
-    archived_draft:
-      label: 'Restore to Draft'
-      from:
-        - archived
-      to: draft
-      weight: 3
-    archived_published:
-      label: Restore
-      from:
-        - archived
-      to: published
-      weight: 4
+      weight: 0
     create_new_draft:
       label: 'Create New Draft'
       from:
-        - draft
+        - archived
         - published
       to: draft
-      weight: 0
+      weight: -3
+    draft:
+      label: Draft
+      from:
+        - draft
+        - needs_review
+      to: draft
+      weight: 2
     publish:
       label: Publish
       from:
         - draft
+        - needs_review
         - published
       to: published
+      weight: -1
+    restore_from_archive:
+      label: 'Restore from archive'
+      from:
+        - archived
+      to: published
       weight: 1
-  entity_types: {  }
+    send_to_review:
+      label: 'Send to review'
+      from:
+        - draft
+        - needs_review
+      to: needs_review
+      weight: -2
+  entity_types:
+    node:
+      - landing_page
+      - special_announcement
+      - sponsor
   default_moderation_state: draft
