DGC 52: Archive Session Listing (#67)
* Added View & Display Mode

* Added New Button, Updated Listing Card and Values Added

* Updated The Config

* Added Molecules and Design

* Layout Fixes

* Added Pager

* Identation & Formatting

* Fixed Active state and Input width

* Updated Items per Page

* Created Block & Updated Form

* DGC-52: Update the Archeive session listing.

* Updated Icons

* Fixed Fields Height

* Updated Icons & Sessionize Document

* removed config

* DGC-52: Update the alignment issue.

---------

Co-authored-by: prashant114606 <prashant114606@gmail.com>

--- a/config/sync/gutenberg.settings.yml
+++ b/config/sync/gutenberg.settings.yml
@@ -100,6 +100,7 @@ landing_page_allowed_content_block_types: {  }
 landing_page_allowed_drupal_blocks:
   - 'views_block:announcements-all_announcement'
   - 'views_block:announcements-recent_announcement'
+  - 'views_block:session_archive-session_archive_block'
 landing_page_enable_full: true
 landing_page_template: ''
 landing_page_template_lock: none
@@ -124,6 +125,7 @@ landing_page_allowed_image_styles:
   medium: medium
   thumbnail: thumbnail
   wide: wide
+  media_library: 0
 demo_allowed_image_styles:
   full: full
   large: large
