--- a/web/themes/custom/govcon/components/molecules/listing-card/listing-card.yml
+++ b/web/themes/custom/govcon/components/molecules/listing-card/listing-card.yml
@@ -8,12 +8,7 @@ cta:
   title: "Button"
   target: "_blank"
   content: "Button"
-fields:
-  - label: "Field One"
-    value: "Field one content"
-  - label: "Field Two"
-    value: "Field two content"
-  - label: "Field Three"
-    value: "Field three content"
-  - label: "Field Four"
-    value: "Field Four content"
+session_track: "Site Building and Using Drupal"
+technical_level: "Beginner"
+conference_year: "2021"
+presenters: "pixelite, jcloys"
