DGC-97: Created author detail page. (#79)
* DGC-97: Created author detail page.

* DGC-97: Updated author ct styling.

* DGC-97: Fixed code for storybook.

--- a/web/themes/custom/govcon/govcon.libraries.yml
+++ b/web/themes/custom/govcon/govcon.libraries.yml
@@ -45,3 +45,8 @@ sponsors:
   css:
     theme:
       dist/components/organisms/sponsors/sponsors.css: {}
+
+author:
+  css:
+    theme:
+      dist/components/templates/author/author.css: {}
