--- a/config/sync/core.entity_view_display.node.author.default.yml
+++ b/config/sync/core.entity_view_display.node.author.default.yml
@@ -9,9 +9,11 @@ dependencies:
     - field.field.node.author.field_last_name
     - field.field.node.author.field_picture
     - field.field.node.author.field_website
+    - image.style.author_image_style
     - node.type.author
   module:
     - link
+    - media
     - text
     - user
 id: node.author.default
@@ -36,7 +38,7 @@ content:
     region: content
   field_job_title:
     type: string
-    label: inline
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -51,17 +53,19 @@ content:
     weight: 2
     region: content
   field_picture:
-    type: entity_reference_entity_view
+    type: media_thumbnail
     label: hidden
     settings:
-      view_mode: default
-      link: false
+      image_link: ''
+      image_style: author_image_style
+      image_loading:
+        attribute: lazy
     third_party_settings: {  }
     weight: 3
     region: content
   field_website:
     type: link
-    label: inline
+    label: hidden
     settings:
       trim_length: 80
       url_only: false
