--- a/config/sync/core.entity_form_display.node.landing_page.default.yml
+++ b/config/sync/core.entity_form_display.node.landing_page.default.yml
@@ -7,7 +7,10 @@ dependencies:
     - field.field.node.landing_page.field_gutenberg_components
     - field.field.node.landing_page.field_metatags
     - node.type.landing_page
+    - workflows.workflow.editorial
   module:
+    - content_moderation
+    - media_library
     - metatag
     - path
     - text
@@ -23,10 +26,11 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_background_image:
-    type: options_select
+    type: media_library_widget
     weight: 28
     region: content
-    settings: {  }
+    settings:
+      media_types: {  }
     third_party_settings: {  }
   field_gutenberg_components:
     type: text_textarea
@@ -43,6 +47,12 @@ content:
     settings:
       sidebar: true
       use_details: true
+    third_party_settings: {  }
+  moderation_state:
+    type: moderation_state_default
+    weight: 100
+    region: content
+    settings: {  }
     third_party_settings: {  }
   path:
     type: path
