--- a/config/sync/core.entity_view_display.node.special_announcement.default.yml
+++ b/config/sync/core.entity_view_display.node.special_announcement.default.yml
@@ -5,9 +5,7 @@ dependencies:
   config:
     - field.field.node.special_announcement.body
     - field.field.node.special_announcement.field_conference_year
-    - field.field.node.special_announcement.field_critical_announcement_text
     - field.field.node.special_announcement.field_important_date
-    - field.field.node.special_announcement.field_is_critical
     - field.field.node.special_announcement.field_metatags
     - field.field.node.special_announcement.field_sort_order
     - node.type.special_announcement
@@ -29,6 +27,11 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 1
+    region: content
+  content_moderation_control:
+    settings: {  }
+    third_party_settings: {  }
+    weight: -20
     region: content
   field_important_date:
     type: datetime_default
@@ -53,6 +56,4 @@ content:
     region: content
 hidden:
   field_conference_year: true
-  field_critical_announcement_text: true
-  field_is_critical: true
   field_sort_order: true
