--- a/config/sync/core.entity_view_display.node.special_announcement.recent_announcement.yml
+++ b/config/sync/core.entity_view_display.node.special_announcement.recent_announcement.yml
@@ -6,9 +6,7 @@ dependencies:
     - core.entity_view_mode.node.recent_announcement
     - field.field.node.special_announcement.body
     - field.field.node.special_announcement.field_conference_year
-    - field.field.node.special_announcement.field_critical_announcement_text
     - field.field.node.special_announcement.field_important_date
-    - field.field.node.special_announcement.field_is_critical
     - field.field.node.special_announcement.field_metatags
     - field.field.node.special_announcement.field_sort_order
     - node.type.special_announcement
@@ -31,6 +29,11 @@ content:
     third_party_settings: {  }
     weight: 2
     region: content
+  content_moderation_control:
+    settings: {  }
+    third_party_settings: {  }
+    weight: -20
+    region: content
   field_important_date:
     type: datetime_custom
     label: inline
@@ -47,7 +50,5 @@ content:
     region: content
 hidden:
   field_conference_year: true
-  field_critical_announcement_text: true
-  field_is_critical: true
   field_metatags: true
   field_sort_order: true
