--- a/config/sync/core.entity_view_display.node.special_announcement.teaser.yml
+++ b/config/sync/core.entity_view_display.node.special_announcement.teaser.yml
@@ -6,9 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.special_announcement.body
     - field.field.node.special_announcement.field_conference_year
-    - field.field.node.special_announcement.field_critical_announcement_text
     - field.field.node.special_announcement.field_important_date
-    - field.field.node.special_announcement.field_is_critical
     - field.field.node.special_announcement.field_metatags
     - field.field.node.special_announcement.field_sort_order
     - node.type.special_announcement
@@ -30,6 +28,11 @@ content:
     third_party_settings: {  }
     weight: 101
     region: content
+  content_moderation_control:
+    settings: {  }
+    third_party_settings: {  }
+    weight: -20
+    region: content
   links:
     settings: {  }
     third_party_settings: {  }
@@ -37,8 +40,6 @@ content:
     region: content
 hidden:
   field_conference_year: true
-  field_critical_announcement_text: true
   field_important_date: true
-  field_is_critical: true
   field_metatags: true
   field_sort_order: true
