--- a/config/sync/views.view.announcements.yml
+++ b/config/sync/views.view.announcements.yml
@@ -7,6 +7,7 @@ dependencies:
     - core.entity_view_mode.node.recent_announcement
     - node.type.special_announcement
   module:
+    - datetime
     - node
     - user
 id: announcements
@@ -112,16 +113,14 @@ display:
         options: {  }
       empty: {  }
       sorts:
-        created:
-          id: created
-          table: node_field_data
-          field: created
+        field_important_date_value:
+          id: field_important_date_value
+          table: node__field_important_date
+          field: field_important_date_value
           relationship: none
           group_type: group
           admin_label: ''
-          entity_type: node
-          entity_field: created
-          plugin_id: date
+          plugin_id: datetime
           order: DESC
           expose:
             label: ''
@@ -255,6 +254,23 @@ display:
     position: 1
     display_options:
       title: ''
+      sorts:
+        created:
+          id: created
+          table: node_field_data
+          field: created
+          relationship: none
+          group_type: group
+          admin_label: ''
+          entity_type: node
+          entity_field: created
+          plugin_id: date
+          order: ASC
+          expose:
+            label: ''
+            field_identifier: ''
+          exposed: false
+          granularity: second
       style:
         type: default
         options:
@@ -270,6 +286,7 @@ display:
         title: false
         style: false
         row: false
+        sorts: false
         footer: false
       display_description: ''
       footer:
