--- a/config/sync/core.entity_form_display.node.session_archive.default.yml
+++ b/config/sync/core.entity_form_display.node.session_archive.default.yml
@@ -21,6 +21,7 @@ dependencies:
     - image.style.thumbnail
     - node.type.session_archive
   module:
+    - content_moderation
     - datetime
     - file
     - image
@@ -36,7 +37,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 129
+    weight: 4
     region: content
     settings:
       rows: 9
@@ -46,13 +47,13 @@ content:
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 17
     region: content
     settings: {  }
     third_party_settings: {  }
   field__sides_link:
     type: link_default
-    weight: 126
+    weight: 14
     region: content
     settings:
       placeholder_url: ''
@@ -60,32 +61,32 @@ content:
     third_party_settings: {  }
   field_conference_year:
     type: options_select
-    weight: 6
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
   field_experience_level:
     type: options_select
-    weight: 122
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
   field_female_attendees:
     type: number
-    weight: 123
+    weight: 11
     region: content
     settings:
       placeholder: ''
     third_party_settings: {  }
   field_i_can_deliver_this_session:
     type: options_select
-    weight: 124
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
   field_image:
     type: image_image
-    weight: 125
+    weight: 13
     region: content
     settings:
       progress_indicator: throbber
@@ -93,14 +94,14 @@ content:
     third_party_settings: {  }
   field_male_attendees:
     type: number
-    weight: 127
+    weight: 12
     region: content
     settings:
       placeholder: ''
     third_party_settings: {  }
   field_metatags:
     type: metatag_firehose
-    weight: 26
+    weight: 15
     region: content
     settings:
       sidebar: true
@@ -108,7 +109,7 @@ content:
     third_party_settings: {  }
   field_room:
     type: string_textfield
-    weight: 128
+    weight: 9
     region: content
     settings:
       size: 60
@@ -116,13 +117,13 @@ content:
     third_party_settings: {  }
   field_session_date_time:
     type: datetime_default
-    weight: 121
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
   field_session_track:
     type: string_textfield
-    weight: 130
+    weight: 2
     region: content
     settings:
       size: 60
@@ -130,65 +131,65 @@ content:
     third_party_settings: {  }
   field_status:
     type: options_select
-    weight: 131
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
   field_supporting_documents:
     type: file_generic
-    weight: 133
+    weight: 5
     region: content
     settings:
       progress_indicator: throbber
     third_party_settings: {  }
   field_video:
     type: media_library_widget
-    weight: 132
+    weight: 6
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 100
+    weight: 22
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 21
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 15
+    weight: 19
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   simple_sitemap:
-    weight: 10
+    weight: 18
     region: content
     settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 120
+    weight: 23
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 16
+    weight: 20
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -196,7 +197,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 16
     region: content
     settings:
       match_operator: CONTAINS
