DGC-126: Updated Errors on Session Archive Detail Page (#80)
* DGC-126: Updated session archive CT.

* DGC-126: Updated margin styling.

* DGC-126: Updated twig logic and styling for all three CTs.

* DGC-126: Fixed author ct twigs.

* DGC-126: Updated twig files.

* DGC-126: Updated content types logics.

* DGC-126: Update the styling.

---------

Co-authored-by: prashant114606 <prashant114606@gmail.com>

--- a/config/sync/field.field.node.session_archive.field__sides_link.yml
+++ b/config/sync/field.field.node.session_archive.field__sides_link.yml
@@ -11,7 +11,7 @@ id: node.session_archive.field__sides_link
 field_name: field__sides_link
 entity_type: node
 bundle: session_archive
-label: Link
+label: 'Session Recording'
 description: ''
 required: false
 translatable: false
