--- a/config/sync/structure_sync.data.yml
+++ b/config/sync/structure_sync.data.yml
@@ -1,5 +1,24 @@
 blocks:
   -
+    info: 'Two Column with Image'
+    langcode: en
+    uuid: ed9a7cf1-fdbd-4e5d-8502-97c433b4cf2d
+    bundle: reusable_block
+    revision_id: null
+    rev_id_current: null
+    fields:
+      body:
+        -
+          value: "<!-- wp:group {\"lock\":{\"move\":false,\"remove\":true},\"layout\":{\"type\":\"constrained\"},\"metadata\":{\"name\":\"Two Column with Image\"}} -->\r\n<div class=\"wp-block-group\"><!-- wp:columns {\"className\":\"two-column-text-image\"} -->\r\n<div class=\"wp-block-columns two-column-text-image\"><!-- wp:column {\"verticalAlignment\":\"center\",\"style\":{\"spacing\":{\"padding\":{\"top\":\"var:preset|spacing|20\",\"bottom\":\"var:preset|spacing|20\",\"left\":\"0\",\"right\":\"0\"}}}} -->\r\n<div class=\"wp-block-column is-vertically-aligned-center\" style=\"padding-top:var(--wp--preset--spacing--20);padding-right:0;padding-bottom:var(--wp--preset--spacing--20);padding-left:0\"><!-- wp:paragraph {\"fontFamily\":\"roboto-mono\"} -->\r\n<p class=\"has-roboto-mono-font-family\">Drupal GovCon brings together people from all over the country who use, develop, design, and support the Drupal platform with a focus in government. Although there is a&nbsp;focus on government, there is also a heavy representation of attendees from the private, non-profit, and education sectors as well.</p>\r\n<!-- /wp:paragraph -->\r\n\r\n<!-- wp:paragraph {\"fontFamily\":\"roboto-mono\"} -->\r\n<p class=\"has-roboto-mono-font-family\">Drupal GovCon is the heartbeat of the DC Drupal community. We come together for three days every year, to learn, improve, and innovate as a community. Drupal GovCon will feature a full schedule of educational, contribution, and networking opportunities.</p>\r\n<!-- /wp:paragraph --></div>\r\n<!-- /wp:column -->\r\n\r\n<!-- wp:column {\"verticalAlignment\":\"center\",\"style\":{\"spacing\":{\"padding\":{\"top\":\"0\",\"bottom\":\"0\",\"left\":\"0\",\"right\":\"0\"}}}} -->\r\n<div class=\"wp-block-column is-vertically-aligned-center\" style=\"padding-top:0;padding-right:0;padding-bottom:0;padding-left:0\"><!-- wp:image {\"align\":\"center\",\"sizeSlug\":\"original\",\"linkDestination\":\"none\",\"style\":{\"border\":{\"radius\":\"4px\"}}} -->\r\n<figure class=\"wp-block-image aligncenter size-original has-custom-border\"><img src=\"https://placehold.co/480x256\" alt=\"Group of people\" style=\"border-radius:4px\"/></figure>\r\n<!-- /wp:image --></div>\r\n<!-- /wp:column --></div>\r\n<!-- /wp:columns --></div>\r\n<!-- /wp:group -->"
+          summary: ''
+          format: plain_text
+      field_pattern_category:
+        -
+          target_id: '3'
+      field_pattern_sync_status:
+        -
+          value: unsynced
+  -
     info: Sessionize
     langcode: en
     uuid: 637243b0-ba40-43a1-bf88-6cb819142ed0
