DGC-154: Update the placeholder text. (#115)

--- a/config/sync/views.view.session_archive.yml
+++ b/config/sync/views.view.session_archive.yml
@@ -197,7 +197,8 @@ display:
               anonymous: '0'
               content_editor: '0'
               administrator: '0'
-            placeholder: ''
+              content_author: '0'
+            placeholder: 'Enter session track keywords ...'
           is_grouped: false
           group_info:
             label: ''
