--- a/config/sync/views.view.session_archive.yml
+++ b/config/sync/views.view.session_archive.yml
@@ -7,6 +7,7 @@ dependencies:
     - node.type.session_archive
     - taxonomy.vocabulary.conference_year
   module:
+    - datetime
     - node
     - options
     - search
@@ -129,16 +130,27 @@ display:
             format: full_html
           tokenize: false
       sorts:
-        created:
-          id: created
-          table: node_field_data
-          field: created
+        field_conference_year_target_id:
+          id: field_conference_year_target_id
+          table: node__field_conference_year
+          field: field_conference_year_target_id
           relationship: none
           group_type: group
           admin_label: ''
-          entity_type: node
-          entity_field: created
-          plugin_id: date
+          plugin_id: standard
+          order: ASC
+          expose:
+            label: ''
+            field_identifier: ''
+          exposed: false
+        field_session_date_time_value:
+          id: field_session_date_time_value
+          table: node__field_session_date_time
+          field: field_session_date_time_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: datetime
           order: DESC
           expose:
             label: ''
