--- a/config/sync/core.entity_view_display.node.session_archive.session_archive_listing.yml
+++ b/config/sync/core.entity_view_display.node.session_archive.session_archive_listing.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.session_archive_listing
     - field.field.node.session_archive.body
     - field.field.node.session_archive.field__sides_link
+    - field.field.node.session_archive.field_co_presenter
     - field.field.node.session_archive.field_conference_year
     - field.field.node.session_archive.field_experience_level
     - field.field.node.session_archive.field_female_attendees
@@ -13,6 +14,7 @@ dependencies:
     - field.field.node.session_archive.field_image
     - field.field.node.session_archive.field_male_attendees
     - field.field.node.session_archive.field_metatags
+    - field.field.node.session_archive.field_presenter
     - field.field.node.session_archive.field_room
     - field.field.node.session_archive.field_session_date_time
     - field.field.node.session_archive.field_session_track
@@ -53,20 +55,28 @@ content:
     third_party_settings: {  }
     weight: 2
     region: content
+  field_co_presenter:
+    type: entity_reference_label
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    weight: 7
+    region: content
   field_conference_year:
     type: entity_reference_label
     label: hidden
     settings:
       link: false
     third_party_settings: {  }
-    weight: 6
+    weight: 8
     region: content
   field_experience_level:
     type: list_default
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 7
+    weight: 9
     region: content
   field_image:
     type: image
@@ -78,6 +88,14 @@ content:
         attribute: lazy
     third_party_settings: {  }
     weight: 1
+    region: content
+  field_presenter:
+    type: entity_reference_label
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    weight: 6
     region: content
   field_session_date_time:
     type: datetime_default
