--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "drupal/linkit": "^7.0",
         "drupal/menu_link_attributes": "^1.5",
         "drupal/metatag": "^2.1",
+        "drupal/migrate_file": "^3.0@alpha",
         "drupal/migrate_plus": "^6.0",
         "drupal/migrate_source_csv": "^3.7",
         "drupal/migrate_tools": "^6.0",
