--- a/config/sync/core.entity_form_display.node.author.default.yml
+++ b/config/sync/core.entity_form_display.node.author.default.yml
@@ -5,14 +5,16 @@ dependencies:
   config:
     - field.field.node.author.field_bio
     - field.field.node.author.field_first_name
+    - field.field.node.author.field_image
     - field.field.node.author.field_job_title
     - field.field.node.author.field_last_name
-    - field.field.node.author.field_picture
     - field.field.node.author.field_website
+    - image.style.thumbnail
     - node.type.author
   module:
+    - content_moderation
+    - image
     - link
-    - media_library
     - path
     - text
 id: node.author.default
@@ -22,13 +24,13 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 2
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
   field_bio:
     type: text_textarea
-    weight: 11
+    weight: 12
     region: content
     settings:
       rows: 5
@@ -36,15 +38,23 @@ content:
     third_party_settings: {  }
   field_first_name:
     type: string_textfield
-    weight: 8
+    weight: 9
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  field_image:
+    type: image_image
+    weight: 13
+    region: content
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
+    third_party_settings: {  }
   field_job_title:
     type: string_textfield
-    weight: 10
+    weight: 11
     region: content
     settings:
       size: 60
@@ -52,22 +62,15 @@ content:
     third_party_settings: {  }
   field_last_name:
     type: string_textfield
-    weight: 9
+    weight: 10
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  field_picture:
-    type: media_library_widget
-    weight: 13
-    region: content
-    settings:
-      media_types: {  }
-    third_party_settings: {  }
   field_website:
     type: link_default
-    weight: 12
+    weight: 13
     region: content
     settings:
       placeholder_url: ''
@@ -81,32 +84,32 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 6
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 4
+    weight: 5
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   simple_sitemap:
-    weight: 3
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 7
+    weight: 8
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 5
+    weight: 6
     region: content
     settings:
       display_label: true
@@ -121,7 +124,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 1
+    weight: 2
     region: content
     settings:
       match_operator: CONTAINS
