--- a/config/sync/field.storage.node.field_i_can_deliver_this_session.yml
+++ b/config/sync/field.storage.node.field_i_can_deliver_this_session.yml
@@ -12,13 +12,13 @@ type: list_string
 settings:
   allowed_values:
     -
-      value: 'yes'
-      label: 'In-Person or Virtual,'
+      value: 'In-Person or Virtual'
+      label: 'In-Person or Virtual'
     -
-      value: 'no'
+      value: 'In-Person Only'
       label: 'In-Person Only'
     -
-      value: virtual_only
+      value: 'Virtual Only'
       label: 'Virtual Only'
   allowed_values_function: ''
 module: options
