DGC-128: Fixed date/time and message glitch bug. (#118)
* DGC-128: Fixed date/time and message glitch bug.

* DGC-128: Drupal date/time format files.

* DGC-128: Fixed session archive twig file.

---------

Co-authored-by: prashant114606 <prashant114606@gmail.com>

--- a/config/sync/system.date.yml
+++ b/config/sync/system.date.yml
@@ -2,9 +2,9 @@ _core:
   default_config_hash: IVsFTD1mvR2NGBP_1myt9kFIFmGepH4PyaN5aQBYpno
 first_day: 0
 country:
-  default: null
+  default: US
 timezone:
-  default: UTC
+  default: America/New_York
   user:
     configurable: true
     default: 0
