--- a/config/sync/core.entity_view_display.node.session_archive.default.yml
+++ b/config/sync/core.entity_view_display.node.session_archive.default.yml
@@ -137,11 +137,11 @@ content:
     weight: 108
     region: content
   field_session_date_time:
-    type: datetime_default
+    type: datetime_custom
     label: hidden
     settings:
-      timezone_override: ''
-      format_type: medium
+      timezone_override: America/New_York
+      date_format: 'D, m/d/Y - g:ia T'
     third_party_settings: {  }
     weight: 101
     region: content
