DGC-161: Fix the ordering of Session Archive listing (#132)

--- a/config/sync/migrate_plus.migration.session_csv_import.yml
+++ b/config/sync/migrate_plus.migration.session_csv_import.yml
@@ -133,9 +133,8 @@ process:
     -
       plugin: entity_lookup
       entity_type: node
-      bundle: 'author'
+      bundle: author
       value_key: title
-
   type:
     plugin: default_value
     default_value: session_archive
